homepage: - Fixed buttons not showing when there are tweets to display. - Implemented dynamic loading of new tweets on Homepage. - Ensured correct sorting of tweets by timestamp (ascending). - Refactored code for improved organization and readability.

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -238,6 +238,10 @@
     width: 85%;
     height: 80%;
   }
+
+  .infoDiv {
+    gap: 3rem;
+  }
 }
 
 @media (max-width: 650px) {
